2010-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/NSPropertyList+GNUstepBase.m:
	New category to replace property list write functionality no longer
	present in OSX.

2010-05-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: ([+encodingFromCharset:])
	Experimental extension to support NSStringEncoding symbolic constants
	in string form, in addition to more common characterset names
	(primarily for gdl2/gsweb).

2010-05-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m:
	* Source/Additions/NSString+GNUstepBase.m:
	* Headers/Foundation/NSString.h:
	* Headers/Additions/GNUstepBase/NSString+GNUstepBase.h:
	Revert last change ... there's no such method as +encodingNamed:
	in OSX/OpenStep, so it definitely shouldn't be in NSString.[hm]
	I think we can debate whether to add it to the additions library,
	though I'm not sure that it's actually a generally useful addition
	(if I understand correctly, it's used only in gdl2/gsweb and ought
	probably to be a category there ... assuming that there's really
	no existing/standard mechanism to do the job).

2010-05-30  David Wetzel <dave@turbocat.de>

	* Source/NSString.m
	* Source/Additions/NSString+GNUstepBase.m
	* Headers/Foundation/NSString.h
	* Headers/Additions/GNUstepBase/NSString+GNUstepBase.h
	added encodingNamed:
    
2010-05-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.h:
	Floating point fix for openbsd suggested by Sebastian Reitenbach

2010-05-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAttributedString.m (-initWithCoder:, -encodeWithCoder:):
	Fix keyed archiving and unarchiving of (mutable) attributed
	strings with multiple attribute ranges.

2010-05-30  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Update to latest zone info.

2010-05-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Attempted fix for bug #29920

2010-05-29  Richard Frith-Macdonald <rfm@gnu.org>
